# change_detection

./: .gitignore  README.md  ccg_analysis_code2018_FP.R  change_detection.R  change_detection.py  change_speed_metrics.ipynb  chem_para_results.csv  chemical_per_list_size.sql  data.pick.csv  first_paper_analysis.ipynb  install_packages.R  pyproject.toml  results_extract - pdf graphs.R  results_extract.R
.ipynb_checkpoints/: change_speed_metrics-checkpoint.ipynb
change_detection/: __init__.py  change_detection.R  functions.py  results_extract.R  trend_isat_functions.R
data/desogestrel_measure/: .bq_cache.csv.24d9e26a637889fde6758949b73c966a.tmp  r_input_0.csv  r_input_1.csv  r_input_2.csv  r_input_3.csv  r_intermediate_0.RData  r_intermediate_1.RData  r_intermediate_2.RData  r_intermediate_3.RData  r_output.csv  r_output_0.csv  r_output_1.csv  r_output_2.csv  r_output_3.csv
data/testing/: bq_cache.csv  r_input_0.csv  r_input_1.csv  r_input_2.csv  r_input_3.csv  r_intermediate_0.RData  r_intermediate_1.RData  r_intermediate_2.RData  r_intermediate_3.RData  r_output_0.csv  r_output_1.csv  r_output_2.csv  r_output_3.csv
data/trimethoprim_measure/: r_input_0.csv  r_input_1.csv  r_input_2.csv  r_input_3.csv  r_intermediate_0.RData  r_intermediate_1.RData  r_intermediate_2.RData  r_intermediate_3.RData  r_output.csv  r_output_0.csv  r_output_1.csv  r_output_2.csv  r_output_3.csv
examples/: examples.ipynb  examples.py
examples/queries/: desogestrel_measure.sql  (+3 more)
queries/: chemical_per_paragraph.sql  desogestrel_measure.sql  statins.sql  trimethoprim_measure.sql
(+15 files in other folders)
