[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "change_detection"
author = "Alex Walker"
author-email = "alex.walker@phc.ox.ac.uk"
home-page = "https://github.com/ebmdatalab/change_detection"
classifiers = ["License :: OSI Approved :: MIT License"]

